--- a/node-end/package.json
+++ b/node-end/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "pug": "^2.0.3",
+    "ws": "^7.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.0"
